--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/slider.css">
+    <script charset="UTF-8" src="//cdn.sendpulse.com/js/push/c8705a433f235adc51872d8d03150fb5_1.js" async></script>
 
 </head>
 <body class="is-3-column">
